@@ -544,17 +544,17 @@
 			{
 				USB_Descriptor_Header_t Header; /**< Descriptor header, including type and size. */
 				
-				int16_t     UnicodeString[]; /**< String data, as unicode characters (alternatively,
-				                              *   string language IDs). If normal ASCII characters are
-				                              *   to be used, they must be added as an array of characters
-				                              *   rather than a normal C string so that they are widened to
-				                              *   Unicode size.
-				                              *
-				                              *   Under GCC, strings prefixed with the "L" character (before
-				                              *   the opening string quotation mark) are considered to be
-				                              *   Unicode strings, and may be used instead of an explicit
-				                              *   array of ASCII characters.
-				                              */
+				wchar_t UnicodeString[];  /**< String data, as unicode characters (alternatively,
+				                           *   string language IDs). If normal ASCII characters are
+				                           *   to be used, they must be added as an array of characters
+				                           *   rather than a normal C string so that they are widened to
+				                           *   Unicode size.
+				                           *
+				                           *   Under GCC, strings prefixed with the "L" character (before
+				                           *   the opening string quotation mark) are considered to be
+				                           *   Unicode strings, and may be used instead of an explicit
+				                           *   array of ASCII characters.
+				                           */
 			} USB_Descriptor_String_t;
 
 			/** Type define for a standard string descriptor. Unlike other standard descriptors, the length
